--- a/index.html
+++ b/index.html
@@ -28,14 +28,25 @@
   </div>
 </div>
   
-<div class="container">
-  <div class="container-sm">
-    <div class="text-center">
+<table border="1" style="font-size:2vw; color: whitesmoke">
+    <thead>
+    <tr>
+      <td>ID</td>
+      <td>Name</td>
 
-        <ul class="list-group">{{range .}}
-            <li class="list-group-item">{{ .Task }}</li>
-          </ul>{{end}}
 
-    </div> 
-  </div>
-</div>
+
+      <td>Delete</td>
+    </tr>
+     </thead>
+     <tbody>
+  {{ range . }}
+    <tr>
+      <td>{{ .Id }}</td>
+      <td> {{ .Task }} </td>
+      <td><a href="/delete?id={{ .Id }}">Delete</a><td></td>
+
+    </tr>
+  {{ end }}
+     </tbody>
+  </table>
