--- a/index.html
+++ b/index.html
@@ -22,31 +22,36 @@
 
 <div class="text-center">
   <h1 style="font-size:8vw; color: whitesmoke" >TO-DO</h1>
-  <div class="form-group">
-    <form action="/test" method="POST">
-        <input class="form-control" type="text" id="nameID" name="nameName" value="" placeholder="Enter Task"><br>
-        <button type="submit" class="btn btn-success mb-2">Submit Task</button>
-</form>
+   <div class="row">
+    <div class="col-sm-4"></div>
+    <div class="col-sm-4">
+        <div class="form-group">
+            <form action="/todo" method="POST">
+                <input class="form-control" type="text" id="nameID" name="nameName" value="" placeholder="Enter Task"><br>
+                <button type="submit" class="btn btn-success mb-2">Submit Task</button>
+            </form>
+        </div>
+    </div>
   </div>
 </div>
-  
-<table border="1" style="font-size:2vw; color: whitesmoke">
-    <thead>
-    <tr>
-      <td>ID</td>
-      <td>Tasks</td>
-
-    </tr>
-     </thead>
-     <tbody>
-  {{ range . }}
-    <tr>
-      <td>{{ .Id }}</td>
-      <td> {{ .Task }} </td>
-      <td>
-        <a href="/delete/{{.Id}}">Delete</a></a>
-      </td>
-    </tr>
-  {{ end }}
-     </tbody>
-  </table>
+<div class="row">
+    <div class="col-sm-4"></div>
+    <div class="col-sm-4">
+        <table class="table table-striped table-dark">
+            <thead>
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Task</th>
+                <th scope="col"></th>
+            </tr>
+            </thead>
+            <tbody>{{ range . }}
+            <tr>
+                <th scope="row">{{ .Id }}</th>
+                <td>{{ .Task }}</td>
+                <td><a href="/{{.Id}}">Delete</a></a></td>
+            </tr>
+            </tbody>{{ end }}
+        </table>
+    </div>
+</div>
